--- a/index.html
+++ b/index.html
@@ -343,14 +343,14 @@
                         <p class="text-[#03071299]">Total Price</p>
                         <p class="text-[#03071299]">BDT <span id="ticket_price">0</span></p>
                       </div>
-                      <div class="inline-flex mt-4">
-                        <input type="text" placeholder="Have any copupon?" class="p-4 min-w-[280px] rounded-lg focus:outline-none">
-                        <button class="relative left-[-20%] px-4 py-1 bg-[#1DD100] rounded-r-lg text-white">Apply</button>
+                      <div id="cuponBox" class="inline-flex mt-4">
+                        <input id="cupon_input" type="text" placeholder="Have any copupon?" class="p-4 min-w-[280px] rounded-lg focus:outline-none">
+                        <button onclick="" id="cupon_apply" class="relative left-[-20%] px-4 py-1 bg-[#1DD100] rounded-r-lg text-white">Apply</button>
                       </div>
-                      
+                      <div id="discount"></div>
                       <div class="flex justify-between mt-6">
                         <p class="text-[#03071299]">Grand Total</p>
-                        <p class="text-[#03071299]">BDT <span>550</span></p>
+                        <p class="text-[#03071299]">BDT <span id="grand_total">0</span></p>
                       </div>
                   </div>
                   <!-- from -->
