--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="./style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -137,16 +136,16 @@
       <div class="mt-14 lg:mt-44">
         <h1 class="text-4xl font-bold text-center">Best offers for you</h1>
         <!-- cupon -->
-        <div class="coupon flex gap-4 flex-col lg:flex-row justify-between items-center mt-12">
-          <div class="flex items-center rounded-xl">
-            <div class="p-6 lg:p-10 bg-[#FFBF0F] border-r-2 border-dashed lg:min-h-44">
+        <div class="coupon flex gap-10 flex-col lg:flex-row justify-between items-center mt-12">
+          <div class="flex items-center rounded-xl flex-1">
+            <div class="p-6 lg:p-10 bg-[#FFBF0F] border-r-2 border-dashed lg:min-h-44 ">
               <h1 class="text-[#030712CC] text-2xl lg:text-4xl font-bold">15% OFF</h1>
               <p class="text-[#030712CC] text-xl font-semibold">
                 on your next purchase
               </p>
               <p class="text-[#03071280]">use by January 2024</p>
             </div>
-            <div class="p-6 lg:p-10 bg-[#FFBF0F]  lg:min-h-44">
+            <div class="p-6 lg:p-10 bg-[#FFBF0F]  lg:min-h-44 flex flex-col justify-center items-center flex-1">
               <h1 class="text-[#030712CC] text-2xl lg:text-3xl font-bold">NEW15</h1>
               <h1>Coupon Code</h1>
             </div>
@@ -161,7 +160,7 @@
               </p>
               <p class="text-[#03071280]">use by January 2024</p>
             </div>
-            <div class="p-6 lg:p-10 bg-[#F78C9C]  lg:min-h-44">
+            <div class="p-6 lg:p-10 bg-[#F78C9C]  lg:min-h-44 flex flex-col justify-center items-center flex-1">
               <h1 class="text-[#030712CC] text-2xl lg:text-3xl font-bold">Couple 20</h1>
               <h1>Coupon Code</h1>
             </div>
@@ -353,10 +352,15 @@
                         <p class="text-[#03071299]">Total Price</p>
                         <p class="text-[#03071299]">BDT <span id="ticket_price">0</span></p>
                       </div>
-                      <div id="cuponBox" class="inline-flex mt-4">
-                        <input id="cupon_input" type="text" placeholder="Have any copupon?" class="p-4 min-w-[280px] rounded-lg focus:outline-none">
-                        <button onclick="" id="cupon_apply" class="relative left-[-20%] px-4 py-1 bg-[#1DD100] rounded-r-lg text-white">Apply</button>
-                      </div>
+
+                        <!-- btn -->
+                        <div id="cuponBox" class="join mt-4">
+                          <input id="cupon_input" class="input join-item w-[80%] focus:outline-none" placeholder="Have any copupon?"/>
+                          <button id="cupon_apply" class="btn join-item rounded-r-lg text-white bg-[#1DD100]">Apply</button>
+                        </div>
+
+                        <!--  -->
+                    
                       <div id="discount"></div>
                       <div class="flex justify-between mt-6">
                         <p class="text-[#03071299]">Grand Total</p>
@@ -365,14 +369,14 @@
                   </div>
                   <!-- from -->
                   <div>
-                    <form action="">
+                    <form>
                       <label class="mt-4 mb-3 block">Passenger Name*</label>
                     <input id="user_name" type="text" placeholder="Enter your name" required class="w-full rounded-lg p-4 border-2 border-gray-500">
                     <label class="mt-4 mb-3 block">Phone Number*</label>
                     <input id="phone" type="text" placeholder="Enter your name" required class="w-full rounded-lg p-4 border-2 border-gray-500">
                     <label class="mt-4 mb-3 block">Email ID</label>
                     <input type="text" placeholder="Enter your name" class="w-full rounded-lg p-4 border-2 border-gray-500">
-                    <button type="submit" disabled="false"  id="next_btn" onclick="my_modal_4.showModal()" class="btn bg-[#1DD100] rounded-xl text-white w-full my-8">Next</button>
+                    <button  disabled="false"  id="next_btn" onclick="my_modal_4.showModal()"  class="btn bg-[#1DD100] rounded-xl text-white w-full my-8">Next</button>
                     </form>
 
                     <!-- modal -->
@@ -387,12 +391,12 @@
                           <p class="text-[#4A4A4A]">Shortly you will find a confirmation in your email.</p>
                         <div class="modal-action">
                           <form method="dialog">
-                            <!-- if there is a button, it will close the modal -->
                             <button class="btn bg-[#27AE60] rounded-2xl min-w-40 text-xl text-white font-bold">Continue</button>
                           </form>
                         </div>
                       </div>
                     </dialog>
+                    
                     <div class="flex justify-around">
                         <a href="" class="text-[#03071299] underline">Terms and Conditions</a>
                         <a href="" class="text-[#03071299] underline">Cancellation Policy</a>
