--- a/index.html
+++ b/index.html
@@ -369,15 +369,15 @@
                   </div>
                   <!-- from -->
                   <div>
-                    <form>
+                    
                       <label class="mt-4 mb-3 block">Passenger Name*</label>
                     <input id="user_name" type="text" placeholder="Enter your name" required class="w-full rounded-lg p-4 border-2 border-gray-500">
                     <label class="mt-4 mb-3 block">Phone Number*</label>
                     <input id="phone" type="text" placeholder="Enter your name" required class="w-full rounded-lg p-4 border-2 border-gray-500">
                     <label class="mt-4 mb-3 block">Email ID</label>
                     <input type="text" placeholder="Enter your name" class="w-full rounded-lg p-4 border-2 border-gray-500">
-                    <button  disabled="false"  id="next_btn" onclick="my_modal_4.showModal()"  class="btn bg-[#1DD100] rounded-xl text-white w-full my-8">Next</button>
-                    </form>
+                    <button  disabled="false"  id="next_btn" class="btn bg-[#1DD100] rounded-xl text-white w-full my-8">Next</button>
+                  
 
                     <!-- modal -->
                     <dialog id="my_modal_4" class="modal">
