--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+<!-- roboto -->
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 <!-- style -->
 <style>
   *{
-    font-family: "Roboto Mono", monospace;
+    /* font-family: "Roboto Mono", monospace; */
+    font-family: "Roboto", sans-serif;
   }
 </style>
   </head>
@@ -138,29 +141,33 @@
         <!-- cupon -->
         <div class="coupon flex gap-10 flex-col lg:flex-row justify-between items-center mt-12">
           <div class="flex items-center rounded-xl flex-1">
-            <div class="p-6 lg:p-10 bg-[#FFBF0F] border-r-2 border-dashed lg:min-h-44 ">
+            <div class="p-6 lg:p-10 bg-[#FFBF0F] border-r-2 border-dashed lg:min-h-44 relative rounded-l-2xl">
               <h1 class="text-[#030712CC] text-2xl lg:text-4xl font-bold">15% OFF</h1>
               <p class="text-[#030712CC] text-xl font-semibold">
                 on your next purchase
               </p>
               <p class="text-[#03071280]">use by January 2024</p>
+              <div class="w-11 h-11 rounded-full bg-white absolute top-[-10%] right-[-7%]"></div>
+              <div class="w-11 h-11 rounded-full bg-white absolute bottom-[-10%] right-[-7%]"></div>
             </div>
-            <div class="p-6 lg:p-10 bg-[#FFBF0F]  lg:min-h-44 flex flex-col justify-center items-center flex-1">
+            <div class="p-6 lg:p-10 bg-[#FFBF0F]  lg:min-h-44 flex flex-col justify-center items-center flex-1 rounded-r-2xl">
               <h1 class="text-[#030712CC] text-2xl lg:text-3xl font-bold">NEW15</h1>
               <h1>Coupon Code</h1>
             </div>
           </div>
-
+          
           <!-- couple cupon -->
           <div class="flex items-center rounded-xl">
-            <div class="p-6 lg:p-10 bg-[#F78C9C] border-r-2 border-dashed lg:min-h-44">
+            <div class="p-6 lg:p-10 bg-[#F78C9C] border-r-2 border-dashed lg:min-h-44 relative rounded-l-2xl">
               <h1 class="text-[#030712CC] text-2xl lg:text-4xl font-bold">20% OFF</h1>
               <p class="text-[#030712CC] text-xl font-semibold">
                 on your next purchase
               </p>
               <p class="text-[#03071280]">use by January 2024</p>
+              <div class="w-11 h-11 rounded-full bg-white absolute top-[-10%] right-[-7%]"></div>
+              <div class="w-11 h-11 rounded-full bg-white absolute bottom-[-10%] right-[-7%]"></div>
             </div>
-            <div class="p-6 lg:p-10 bg-[#F78C9C]  lg:min-h-44 flex flex-col justify-center items-center flex-1">
+            <div class="p-6 lg:p-10 bg-[#F78C9C]  lg:min-h-44 flex flex-col justify-center items-center flex-1 rounded-r-2xl">
               <h1 class="text-[#030712CC] text-2xl lg:text-3xl font-bold">Couple 20</h1>
               <h1>Coupon Code</h1>
             </div>
@@ -187,7 +194,7 @@
         </p>
         <!--  destination -->
         <div class="grid grid-cols-12">
-          <div class="mt-11 p-8 bg-white rounded-[24px] col-span-12 lg:col-span-9">
+          <div class="mt-11 p-8 bg-white rounded-l-[24px] col-span-12 lg:col-span-9 relative">
             <div class="flex flex-col lg:flex-row justify-between items-center gap-3">
               <div class="inline-flex flex-col lg:flex-row gap-4 justify-center items-center">
                 <img src="./images/bus-logo.png" alt="" />
@@ -227,9 +234,11 @@
                 </button>
               </div>
             </div>
+            <div class="w-16 h-16 rounded-full bg-[#F7F8F8] absolute top-[-6%] right-[-3.5%]"></div>
+            <div class="w-16 h-16 rounded-full bg-[#F7F8F8] absolute bottom-[-6%] right-[-3.5%]"></div>
           </div>
 
-          <div class="mt-11 p-8 bg-white rounded-[24px] col-span-12 lg:col-span-3 flex justify-center items-center border-l-2 border-[#1DD100]">
+          <div class="mt-11 p-8 bg-white rounded-r-[24px] col-span-12 lg:col-span-3 flex justify-center items-center border-l-2 border-dashed border-[#1DD100]">
             <div class="flex flex-col items-center align-middle">
               <div class="mb-6"><img src="./images/fare.png" alt="" /></div>
               <h1 class="font-[#030712] text-4xl font-bold">550 Taka</h1>
